--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,5 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8"
-
+    implementation 'com.tomash:androidcontacts:1.14.0'
 }
